k3s/apps/odoo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: odoo
  labels:
    app.kubernetes.io/name: odoo
